Bug 443624 - When opening a Recent Document, the welcome screen horizontally scrolls itself to the rightmost side
Summary: When opening a Recent Document, the welcome screen horizontally scrolls itsel...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 5.0.0-beta2
Platform: Appimage Linux
: NOR minor
Target Milestone: ---
Assignee: Emmet O'Neill
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-10-12 05:36 UTC by tomtomtomreportingin
Modified: 2021-10-26 01:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tomtomtomreportingin 2021-10-12 05:36:47 UTC
SUMMARY
When opening a Recent Document while on the welcome screen, the welcome screen horizontally scrolls itself to the rightmost side, assuming that the Krita window is resized so that the welcome screen doesn't fully fit its width without scrolling. This issue persists when going back to the welcome screen.

This is a new issue as of beta 2, so it is a regression. It also occurs in 5.1.0-prealpha git 45ea106.

STEPS TO REPRODUCE
1. Resize the width of the Krita window so that the welcome screen can't be fully seen without horizontally scrolling. On a 1920x1080 screen, this for example happens when the Krita window takes 1/2 of the screen.
2. While on the welcome screen, open a Recent Document through either the welcome screen interface or through File -> Open Recent.
3. Close the document.

OBSERVED RESULT
The welcome screen is rightmost scrolled, a papercut that gets in the way of using other actions on the welcome screen until the user manually scrolls. 

EXPECTED RESULT
The welcome screen shouldn't scroll itself on opening of a recent file.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Debian sid
KDE Plasma Version: 5.21.5
KDE Frameworks Version: 5.86.0
Qt Version: 5.12.11 (Appimage)
Comment 1 Bug Janitor Service 2021-10-19 22:19:42 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1110
Comment 2 Emmet O'Neill 2021-10-26 01:43:56 UTC
Git commit 3cb2b2af1e77520520e6bfe9dacc527879168657 by Emmet O'Neill.
Committed on 26/10/2021 at 01:43.
Pushed by emmetoneill into branch 'master'.

Welcome Page: Fixed buggy behavior after clicking a recent document.

M  +1    -1    libs/ui/KisMainWindow.cpp

https://invent.kde.org/graphics/krita/commit/3cb2b2af1e77520520e6bfe9dacc527879168657
Comment 3 Emmet O'Neill 2021-10-26 01:45:02 UTC
Should be fixed now. Tested at 1440p and 720p (QT_SCALE_FACTOR=2) and could no longer reproduce.
Comment 4 Emmet O'Neill 2021-10-26 01:50:28 UTC
Git commit 298258fdc632b1bdd696e74ba7e05f121eb0033b by Emmet O'Neill.
Committed on 26/10/2021 at 01:50.
Pushed by emmetoneill into branch 'krita/5.0'.

Welcome Page: Fixed buggy behavior after clicking a recent document.


(cherry picked from commit 3cb2b2af1e77520520e6bfe9dacc527879168657)

M  +1    -1    libs/ui/KisMainWindow.cpp

https://invent.kde.org/graphics/krita/commit/298258fdc632b1bdd696e74ba7e05f121eb0033b