Welcome Page: Fixed buggy behavior after clicking a recent document.

BUG:443624


(cherry picked from commit 3cb2b2af1e77520520e6bfe9dacc527879168657)